# QKD_for_robots

./: CMakeLists.txt  README.md  package.xml
Kvant_cmd/: CMakeLists.txt  package.xml
include/: kvant.h
key_examples/: 00024b1f_Alice.key
kvant_cmd/: CMakeLists.txt  package.xml
kvant_cmd/include/: kvant_cmd.h
kvant_cmd/keys/: 00024b1f_Alice_res_key.txt
kvant_cmd/src/: kvant_cmd_node.cpp
kvant_joy/: CMakeLists.txt  package.xml
kvant_joy/include/: kvant_joy.h
kvant_joy/launch/: kvant_joy.launch
kvant_joy/msg/: CryptString.msg
kvant_joy/src/: kvant_joy.cpp  xor.cpp
kvant_master/: CMakeLists.txt  package.xml
kvant_master/include/: kvant_cmd.h
kvant_master/launch/: kvant_joy.launch
kvant_master/src/: kvant_master.cpp
kvant_slave/: CMakeLists.txt  package.xml
kvant_slave/include/: kvant_slave.h
kvant_slave/src/: kvant_slave.cpp  kvant_slave_node.cpp
launch/: kvant_joy.launch
src/: aes_node.py  kvant_basic.cpp  kvant_master.cpp  kvant_master_node.cpp  kvant_slave.cpp  kvant_slave_node.cpp  test2.cpp  yourtest
src/libs/: libaes.py
srv/: Aes.srv  Set_key.srv
