<?xml version="1.0"?>
<package>
  <name>kvant</name>
  <version>0.0.2</version>
  <description>The kvant package</description>

  <maintainer email="Nicko_Dema@protonmail.com">Nikolay Dema</maintainer>
  <maintainer email="kaartemov@gmail.com">Kirill Artemov</maintainer>

  <license>GPLv3</license>

  <url type="website">https://github.com/Ram2301/kvant</url>

  <author email="Nicko_Dema@protonmail.com">Nikolay Dema</author>
  <author email="kaartemov@gmail.com">Kirill Artemov</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
